Think I solved the cropping issue

--- a/css/home.css
+++ b/css/home.css
@@ -1,12 +1,13 @@
 .main-head {
 	position: relative;
-  	background: url("../assets/imgs/header.svg");
-	background-position: top;
+  	background: url("../assets/imgs/header-2.svg");
+	background-position: center;
 	background-repeat: no-repeat;
 	background-attachment: scroll;
 	background-size: cover;
 
 	height: 100%;
+	width: auto;
 }
 
 .rounded-card {
